--- a/css/ie.css
+++ b/css/ie.css
@@ -2087,7 +2087,7 @@ height : auto;
 margin-bottom : 20px;
 }
 .navegacao { margin-right:auto;
-margin-left:auto;
+margin-left:25%;
 }
 .navegacao li {
 display : inline;
@@ -2098,13 +2098,15 @@ margin : 0;
 padding : 0;
 background-color : #fff;
 font-size : 11px;
-border : #D1C8C8 solid 1px;
+ border-radius: 10%;
+    border: 1px solid #c5c5c5;
+   
 display : block;
 float : left;
 width : 48px;
 height : 27px;
 text-decoration : none;
-text-align : left;
+text-align : center;
 line-height : 26px;
 margin-right : 3px;
 background-color : rgba(21, 21, 22, 0.03);
@@ -2119,28 +2121,32 @@ display : block;
 margin-right : 6px;
 }
 .navegacao li.active {
-padding : 0;
-background-color : #fff;
-font-size : 11px;
-border : #D1C8C8 solid 1px;
-display : block;
-float : left;
-width : 48px;
-height : 27px;
-text-decoration : none;
-text-align : left;
-line-height : 26px;
-margin-right : 3px;
-background-color : rgba(21, 21, 22, 0.03);
-font-weight : bold;
-text-shadow : 0 1px 0 #FFF4F4;
-color : #fff;
-background-position : 0 0;
-float : left;
-font-size : 11px;
-color : #1749A3;
-display : block;
-margin-right : 6px;
+padding: 0;
+
+    background-color: #fff;
+    font-size: 11px;
+    border-radius: 5%;
+    border: 0px solid #337ab7;
+    box-shadow: 3px 1px 2px rgba(0,0,0,0.3);
+    display: block;
+    float: left;
+    width: 48px;
+    height: 27px;
+    text-decoration: none;
+    text-align: center;
+    line-height: 26px;
+    margin-right: 3px;
+    background-color: rgba(21, 21, 22, 0.03);
+    font-weight: bold;
+    text-shadow: 0 1px 0 #FFF4F4;
+    color: #fff;
+    background-position: 0 0;
+    float: left;
+    font-size: 11px;
+    color: #6e7177;
+    display: block;
+    margin-right: 6px;
+}
 }
 div.autocomplete {
 width : 100%;
